Fixed nav bar to go behind lightbox

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav{
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
 }
 
 ul.nav {
